# RagWeave

./: .claudeignore  .dockerignore  .env.example  .gitignore  .markdownlint.json  AGENTS.md  CLAUDE.md  IMPROVEMENTS.md  Makefile  PROGRAM.md  README.md  changelog.md  cli.py  colang_demo.py  docker-compose.yml  ingest.py  package.json  pyproject.toml  query.py  requirements.txt  watchdog.sh
.brainstorms/: agents-vs-skills.md
.brainstorms/2026-04-18-inference-backend-selection/: memo.md  meta.yaml  notepad.md
.brainstorms/2026-04-21-skill-test-coverage-engine/: brainstorm-notes.md
.brainstorms/2026-04-21-test-coverage-strategy/: meta.yaml  notepad.md
.github/workflows/: ci.yml  deploy-gates.yml
assets/: README.md
assets/banners/: README.md
assets/svg/: README.md
certs/: README.md
config/: README.md  injection_patterns.yaml  kg_schema.yaml  llm_router.yaml  schema_changelog.yaml  settings.py
config/guardrails/: README.md  actions.py  config.yml  conversation.co  dialog_patterns.co  input_rails.co  intents.co  output_rails.co  safety.co
containers/: Dockerfile.api  Dockerfile.runtime  README.md  generate-certs.sh  nginx.conf  proxy_params.conf  requirements-api.txt  requirements-worker.txt
docker/: Dockerfile.api  Dockerfile.runtime  generate-certs.sh  nginx.conf
docs/: README.md  SECTIONS_6_7_INGESTION_PIPELINE.md  SECTIONS_8_9_10_USER_INTERFACE_CONTRIBUTION_FEEDBACK.md
docs/core/: INFERENCE_BACKEND_ENGINEERING_GUIDE.md  README.md
docs/embedding/: INGESTION_NEW_ENGINEER_ONBOARDING_CHECKLIST.md  RAG_embedding_pipeline_arch.md  RAG_embedding_pipeline_spec.md  RAG_embedding_pipeline_spec_summary.md  RAG_embedding_pipeline_summary.md
docs/features/: FEEDBACK_LOOP_SPEC.md  FEEDBACK_LOOP_SPEC_SUMMARY.md  README.md  USER_CONTRIBUTION_SPEC.md  USER_CONTRIBUTION_SPEC_SUMMARY.md
docs/guardrails/: COLANG_DESIGN_GUIDE.md  COLANG_GUARDRAILS_DESIGN.md  COLANG_GUARDRAILS_ENGINEERING_GUIDE.md  COLANG_GUARDRAILS_IMPLEMENTATION.md  COLANG_GUARDRAILS_SPEC.md  COLANG_GUARDRAILS_SPEC_SUMMARY.md  README.md
docs/import_check/: IMPORT_CHECK_DESIGN.md  IMPORT_CHECK_ENGINEERING_GUIDE.md  IMPORT_CHECK_ENHANCEMENTS_DESIGN.md  IMPORT_CHECK_ENHANCEMENTS_IMPLEMENTATION.md  IMPORT_CHECK_ENHANCEMENTS_SPEC.md  IMPORT_CHECK_ENHANCEMENTS_SPEC_SUMMARY.md  IMPORT_CHECK_IMPLEMENTATION.md  IMPORT_CHECK_MODULE_TESTS.md  IMPORT_CHECK_SPEC.md  IMPORT_CHECK_SPEC_SUMMARY.md  README.md
docs/ingestion/: DOCUMENT_PROCESSING_DESIGN.md  DOCUMENT_PROCESSING_IMPLEMENTATION.md  DOCUMENT_PROCESSING_MODULE_TESTS.md  DOCUMENT_PROCESSING_PLAN.md  DOCUMENT_PROCESSING_SPEC.md  DOCUMENT_PROCESSING_SPEC_SUMMARY.md  EMBEDDING_PIPELINE_DESIGN.md  EMBEDDING_PIPELINE_IMPLEMENTATION.md  EMBEDDING_PIPELINE_SPEC_SUMMARY.md  FR_BLOCK_FORMATTING_METHOD.md  INGESTION_NEW_ENGINEER_ONBOARDING_CHECKLIST.md  INGESTION_PIPELINE_ENGINEERING_GUIDE.md  INGESTION_PIPELINE_IMPLEMENTATION.md  INGESTION_PIPELINE_SPEC.md  INGESTION_PLATFORM_SPEC.md  INGESTION_PLATFORM_SPEC_SUMMARY.md  INGEST_PIPELINE_MODULE_TESTS.md  RAG_embedding_pipeline_spec_summary.md  README.md
docs/knowledge_graph/: 2026-04-08-kg-phase1b-sketch.md  2026-04-08-kg-phase2-sketch.md  2026-04-08-kg-subsystem-sketch.md  2026-04-09-kg-phase3-sketch.md  DOC_KG_EXPLORATION.md  KNOWLEDGE_GRAPH_BUILD_PLAN.md  KNOWLEDGE_GRAPH_DESIGN.md  KNOWLEDGE_GRAPH_ENGINEERING_GUIDE.md  KNOWLEDGE_GRAPH_EVAL_PLAN.md  KNOWLEDGE_GRAPH_IMPLEMENTATION.md  KNOWLEDGE_GRAPH_PHASE1B_DESIGN.md  KNOWLEDGE_GRAPH_PHASE2_DESIGN.md  KNOWLEDGE_GRAPH_PHASE3_DESIGN.md  KNOWLEDGE_GRAPH_RETRIEVAL_DESIGN.md  KNOWLEDGE_GRAPH_RETRIEVAL_DESIGN_P2.md  KNOWLEDGE_GRAPH_RETRIEVAL_ENGINEERING_GUIDE.md  KNOWLEDGE_GRAPH_RETRIEVAL_IMPLEMENTATION_DOCS.md  KNOWLEDGE_GRAPH_RETRIEVAL_IMPLEMENTATION_DOCS_P2.md  KNOWLEDGE_GRAPH_RETRIEVAL_SPEC.md  (+8 more)
documents/: README.md  sample_doc_1.md  sample_doc_2.txt  sample_doc_3.txt
evals/: README.md
import_check/: README.md  __init__.py  __main__.py  checker.py  differ.py  fixer.py  inventory.py  schemas.py
logs/: README.md
openshell/: README.md  workspace.yaml
ops/: README.md
prompts/: README.md  query_evaluator.md  query_reformulate_and_evaluate.md  query_reformulator.md  rag_system.md
research/: README.md  baseline_outputs.json  baseline_report.json  baseline_v2_aggregate.json  benchmark_queries.json  iter_004_run1.json  iter_004_run2.json  iter_004_run3.json  iter_005_run1.json  iter_005_run2.json  iter_005_run3.json  iteration_003_report.json  iteration_003_rerun1.json  iteration_003_rerun2.json  iteration_003_rerun3.json  iteration_003_rerun4.json  iterations.tsv  latest_report.json
scripts/: README.md  auto_scale_workers.py  backup_all.sh  bench_ingest.py  bench_multirun.sh  bench_params.json  benchmark_retrieval_query.py  check_container_deps.py  check_env.sh  check_pytest.py  cold_start_setup.sh  compose.sh  container-runtime.sh  dr_drill.sh  fix-docker-networking.sh  fix_encapsulation.py  format_spec_fr_blocks.py  generate-certs.sh  import_check_tracked.py  load_test_api.py  ollama_host_proxy.py  restart_stack.sh  restore_all.sh  run-tests.sh  smoke_test.sh  stack.sh  temporal_worker.py  warmup_docling_models.py  watch_tuning_signals.py
server/: README.md  __init__.py  activities.py  api.py  cli_client.py  mcp_adapter.py  schemas.py  utils.py  worker.py  workflows.py
src/: README.md  __init__.py
tests/: README.md  conftest.py  test_api_error_envelope.py  test_api_key_store.py  test_api_schemas.py  test_cache_provider.py  test_command_catalog_memory.py  test_conversation_memory_api.py  test_document_management_backend.py  test_document_management_routes.py  test_document_processor.py  test_generator.py  test_idempotency_incremental_ingest.py  test_markdown_processor.py  test_mcp_adapter.py  test_memory_provider.py  test_podman_migration.py  test_project_config.py  test_query_filters.py  test_query_processor.py  test_quota_store.py  test_rag_chain_budget.py  test_rag_chain_integration.py  test_rate_limiter.py  test_reranker.py  test_schema_contracts.py  test_security_auth.py  test_server_config.py  test_validation.py  test_vector_store_integration.py
(+830 files in other folders)
