[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag"
version = "0.1.0"
description = "Local RAG pipeline with idempotent ingestion and swappable reliability/observability."
requires-python = ">=3.10"
dependencies = [
  "weaviate-client",
  "sentence-transformers",
  "transformers",
  "torch",
  "networkx",
  "langchain-core",
  "langchain-text-splitters",
  "langgraph",
  "numpy",
  "temporalio",
  "langfuse",
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2.0",
  "accelerate",
  "prometheus-client",
  "redis",
  "pyjwt[crypto]",
  "mcp>=1.26.0",
  "docling>=2.82.0",
  "nemoguardrails>=0.21.0",
  "litellm",
  "pyyaml",
  "orjson",
  "minio",
  "langdetect",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "deptry",
]
pii = [
  "presidio-analyzer",
  "presidio-anonymizer",
  "spacy",
]
gliner = [
  "gliner",
]
chromadb = [
  "chromadb",
]
pinecone = [
  "pinecone-client",
]
qdrant = [
  "qdrant-client",
]
all = [
  "rag[pii]",
  "rag[gliner]",
  "rag[chromadb]",
  "rag[pinecone]",
  "rag[qdrant]",
]

[tool.deptry]
exclude = [".venv"]
# pinecone-client installs as 'pinecone' — map the package name to its import name
package_module_name_map = {"pinecone-client" = "pinecone"}

[tool.deptry.per_rule_ignores]
# uvicorn: CLI entry point, never imported directly
# accelerate: loaded automatically by transformers/torch at runtime
# pytest-mock: pytest plugin, used via fixture not import
# deptry: dev tool, not imported in source
DEP002 = ["uvicorn", "accelerate", "pytest-mock", "deptry"]
# starlette: always bundled with fastapi
# docling_core: always bundled with docling
DEP003 = ["starlette", "docling_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "libcst>=1.8.6",
]
