[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragweave"
version = "0.1.0"
description = "Multi-modal RAG platform with pipeline-first ingestion, visual+text embeddings, and graph-based orchestration."
requires-python = ">=3.10"
dependencies = [
  "weaviate-client",
  "sentence-transformers",
  "transformers",
  "torch",
  "networkx",
  "langchain-core",
  "langchain-text-splitters",
  "langgraph",
  "numpy",
  "temporalio",
  "langfuse",
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2.0",
  "accelerate",
  "prometheus-client",
  "redis",
  "pyjwt[crypto]",
  "mcp>=1.26.0",
  "docling>=2.82.0",
  "nemoguardrails>=0.21.0",
  "litellm",
  "pyyaml",
  "orjson",
  "minio",
  "langdetect",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-json-report>=1.5.0",
  "pytest-timeout>=2.2.0",
  "deptry",
]
pii = [
  "presidio-analyzer",
  "presidio-anonymizer",
  "spacy",
]
gliner = [
  "gliner",
]
chromadb = [
  "chromadb",
]
pinecone = [
  "pinecone-client",
]
qdrant = [
  "qdrant-client",
]
visual = [
  "colpali-engine>=0.3.0",
  "bitsandbytes>=0.43.0",
]
all = [
  "ragweave[pii]",
  "ragweave[gliner]",
  "ragweave[chromadb]",
  "ragweave[pinecone]",
  "ragweave[qdrant]",
  "ragweave[visual]",
]

[tool.deptry]
exclude = [".venv"]
# pinecone-client installs as 'pinecone' — map the package name to its import name
package_module_name_map = {"pinecone-client" = "pinecone"}

[tool.deptry.per_rule_ignores]
# uvicorn: CLI entry point, never imported directly
# accelerate: loaded automatically by transformers/torch at runtime
# pytest-mock: pytest plugin, used via fixture not import
# deptry: dev tool, not imported in source
DEP002 = ["uvicorn", "accelerate", "pytest-mock", "deptry"]
# starlette: always bundled with fastapi
# docling_core: always bundled with docling
DEP003 = ["starlette", "docling_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "libcst>=1.8.6",
]
