[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragweave"
version = "0.1.0"
description = "Multi-modal RAG platform with pipeline-first ingestion, visual+text embeddings, and graph-based orchestration."
requires-python = ">=3.10"
dependencies = [
  "weaviate-client",
  "sentence-transformers",
  "transformers",
  "torch",
  "networkx",
  "langchain-core",
  "langchain-text-splitters",
  "langgraph",
  "numpy",
  "temporalio",
  "langfuse",
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2.0",
  "accelerate",
  "prometheus-client",
  "redis",
  "pyjwt[crypto]",
  "mcp>=1.26.0",
  "docling>=2.82.0",
  "nemoguardrails>=0.21.0",
  "litellm",
  "pyyaml",
  "orjson",
  "minio",
  "langdetect",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio>=0.23",
  "pytest-mock",
  "pytest-json-report>=1.5.0",
  "pytest-timeout>=2.2.0",
  "deptry",
  # Post-refactoring import repair tool. Install from local path until published to PyPI;
  # swap to "import-mend>=0.1.0" once the package is released.
  "import-mend @ file:///home/juansync7/import-check",
]
pii = [
  "presidio-analyzer",
  "presidio-anonymizer",
  "spacy",
]
gliner = [
  "gliner",
]
chromadb = [
  "chromadb",
]
pinecone = [
  "pinecone-client",
]
qdrant = [
  "qdrant-client",
]
visual = [
  "colpali-engine>=0.3.0",
  "bitsandbytes>=0.43.0",
]
kg = [
  # Knowledge-graph feature (src/knowledge_graph/). Mirrors the deps in
  # containers/requirements-worker.txt so the containerized worker and local
  # `uv pip install -e ".[kg]"` produce the same runtime.
  "neo4j",
  "igraph",
  "leidenalg",
  "tree-sitter",
  "tree-sitter-verilog",
  "pyverilog",
]
all = [
  "ragweave[pii]",
  "ragweave[gliner]",
  "ragweave[chromadb]",
  "ragweave[pinecone]",
  "ragweave[qdrant]",
  "ragweave[visual]",
  "ragweave[kg]",
]

[tool.deptry]
# Paths excluded from the import scan. By design, deptry only scans
# production code — test dep issues are caught by pytest at import time
# (a test that imports an undeclared package crashes with ModuleNotFoundError
# the instant pytest tries to collect it, which is effectively the same
# check). Deptry itself has no way to distinguish "test file allowed to
# import pytest" from "prod file importing pytest by mistake" — both look
# the same to DEP004 — so the standard config is to exclude tests entirely.
#
# NOTE: `tests` is in deptry's DEFAULT exclude list. It's repeated here
# explicitly because we override the default (rather than extending it) to
# add our own entries.
exclude = [
    ".venv",
    ".direnv",
    ".claude",        # agentic worktrees / skill outputs — not production code
    "tests",          # dev deps belong here; test dep errors caught by pytest
    "evals",          # eval fixtures use domain-specific deps (cocotb, etc.)
    "import_check",   # TODO: remove once import_check/ directory is deleted from RagWeave
]
# Tells deptry that `[project.optional-dependencies].dev` is the dev-dep
# group. Currently this mainly affects DEP002 classification; it becomes
# relevant if we ever add a second dev-dep optional group.
optional_dependencies_dev_groups = ["dev"]
[tool.deptry.package_module_name_map]
# Packages whose distribution name differs from their import name.
pinecone-client = "pinecone"
presidio-analyzer = "presidio_analyzer"
presidio-anonymizer = "presidio_anonymizer"
qdrant-client = "qdrant_client"
colpali-engine = "colpali_engine"
tree-sitter = "tree_sitter"
tree-sitter-verilog = "tree_sitter_verilog"
# Below: dist-name == import-name, mapped explicitly so deptry doesn't emit
# "Assuming the corresponding module name..." warnings when the optional
# extras that install them aren't active in the current venv.
spacy = "spacy"
gliner = "gliner"
chromadb = "chromadb"
bitsandbytes = "bitsandbytes"
neo4j = "neo4j"
leidenalg = "leidenalg"
igraph = "igraph"
pyverilog = "pyverilog"

[tool.deptry.per_rule_ignores]
# DEP002 — declared as a dep but not imported in source code.
# Valid reasons: CLI entry points, pytest plugins used via flags/fixtures,
# runtime-loaded plugins, dev tooling.
DEP002 = [
    "uvicorn",             # CLI entry point (uvicorn server.api:app ...)
    "accelerate",          # loaded automatically by transformers/torch at runtime
    "pytest",              # used via `import pytest` in tests/, which is excluded from scan
    "pytest-asyncio",      # pytest plugin, used via asyncio_mode = "auto" in ini_options
    "pytest-mock",         # pytest plugin, used via the mocker fixture
    "pytest-timeout",      # pytest plugin, used via --timeout CLI flag
    "pytest-json-report",  # pytest plugin, used via --json-report CLI flag
    "deptry",              # this tool itself — invoked via CLI
]
# DEP003 — imported under a name that's a transitive dep of something we
# already declare directly. Listed here for packages that are stable-bundled
# and safe to rely on transitively.
DEP003 = [
    "starlette",           # always bundled with fastapi
    "docling_core",        # always bundled with docling
    "PIL",                 # always bundled with torchvision (from torch)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "libcst>=1.8.6",
]
